# context

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: ci.yaml
context/: args.py  dataset.py  eval.py  graph.py  loss.py  model.py  stopper.py  train.py
examples/: example_concept_set.py  example_parameter_search.py  example_plot.py  example_usage.py
tests/: __init__.py  conftest.py  test_dataset.py  test_edge-list.py  test_graph.py  test_model.py
