[project]
name = "context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "polars>=1.17.1",
    "rustworkx>=0.15.1",
    "scipy>=1.15.1",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
