[project]
name = "context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "hypll>=0.1.1",
    "igraph>=0.11.8",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "polars>=1.17.1",
    "rustworkx>=0.15.1",
    "scipy>=1.15.1",
    "simple-parsing>=0.1.7",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
